css/style.css
body {
    /* background: pink; */
    background: #6f42c1;
    font-family: Nexa-Light;
    color: white;
}


/* html{
    height: 100vh;
} */


/* Open-Sans Font */

#os {
    font-family: 'Open Sans', sans-serif;
    font-weight: 300;
}

#osr {
    font-family: 'Open Sans', sans-serif;
    font-weight: 400;
}

#ah {
    color: #6f42c1;
}

@font-face {
    font-family: 'Nexa-Bold';
    src: url('../fonts/Nexa-Bold.otf') format('opentype');
}

@font-face {
    font-family: 'Nexa-Light';
    src: url('../fonts/Nexa-Light.otf') format('opentype');
}

.navbar-dark .navbar-nav .nav-link {
    color: rgba(255, 255, 255, 0.801);
}

.navbar-dark .navbar-nav .nav-link:hover {
    color: rgb(255, 255, 255);
}

.navbar-dark .navbar-toggler {
    border-color: transparent;
    color: transparent;
}

.x {
    position: absolute;
    transform: rotate(-30deg);
    transform-origin: bottom;
    height: 124px;
}

#one {
    animation: yo 2s ease forwards;
}

#two {
    animation: yoyo 2s ease forwards;
}

@keyframes yo {
    to {
        transform: rotate(0deg);
    }
}

@keyframes yoyo {
    0% {
        transform: rotate(-30deg);
    }
    50% {
        transform: rotate(0deg);
    }
    100% {
        transform: rotate(30deg);
    }
}

.img {
    width: 100%;
    height: 100%;
    opacity: 0.85;
}

#left {
    position: fixed;
    bottom: -40%;
    left: -50%;
    transform: rotate(90deg);
    background-blend-mode: screen;
}

#right {
    position: fixed;
    top: -40%;
    right: -50%;
    transform: rotate(300deg);
    background-blend-mode: lighten;
}

.dropdown-toggle::after {
    display: none;
    margin-left: 0;
    border-top: none;
    border-right: none;
    border-bottom: 0;
    border-left: none;
    width: 100%;
}

.dropdown-menu.show {
    text-align: center;
}

.down {
    border-radius: 50%;
    color: #6f42c1;
    font-size: 1.5rem;
    padding: 0 4px;
    background-color: white;
}

.button {
    margin-left: 20rem;
}


/* .navbar-dark .navbar-toggler-icon{
    z-index: 1;
    display: flex;
    justify-content: end;
}  */

.dropdown-menu {
    background-color: transparent;
    border: none;
    text-align: center;
}

.dropdown-item:hover {
    background-color: transparent;
}

.dropdown-menu h1 {
    color: white;
}


/* .navbar-expand-lg .navbar-nav .dropdown-menu{
    position: sticky;
} */

.main-heading h1 {
    font-family: Nexa-Bold;
    color: white;
    font-size: 8em;
    font-weight: 100;
    padding-top: 1%;
}

.sub-heading h3 {
    font-family: Nexa-Light;
    color: white;
    font-size: 3.5em;
    font-weight: lighter;
    margin-top: 7px;
    margin-bottom: 21px;
}

.main-content p {
    font-family: Nexa-Light;
    color: white;
    font-size: 2em;
    font-weight: lighter;
}

@media (min-width: 576px) and (max-width: 767.98px) {
    .main-heading h1 {
        font-size: 7em;
    }
    .sub-heading h3 {
        font-size: 3em;
    }
    .main-content p {
        font-size: 1.7em;
    }
}

@media (max-width: 575.98px) {
    .main-heading h1 {
        font-size: 3.5em;
    }
    .sub-heading h3 {
        font-size: 2em;
    }
    .x {
        height: 100px;
    }
    .icons {
        display: flex;
        justify-content: center;
        letter-spacing: 0.6rem;
    }
}

.buttons .btn {
    border-radius: 30px;
    border: none;
    background: white;
    font-family: Nexa-bold;
    font-weight: bolder;
}

.buttons {
    padding: 2%;
}


/* .main-two{
    font-size: medium;
    text-indent: 30%;
} */

#bold {
    font-family: Nexa-Bold;
    font-weight: bolder;
    font-size: 2em;
}

.cont {
    font-size: .8rem;
}

.cont .card {
    background-color: transparent;
    border-color: white;
    border-radius: 0.7rem;
    border-width: 6px;
}

.nav-tabs .nav-link {
    color: white;
    border: none;
    transition: 0.3s;
}

.nav-tabs .nav-link.active {
    height: 100%;
    color: #6f42c1;
    border-radius: 0.3rem 0 0 0;
}

.nav-tabs #nav-profile-tab {
    border-radius: 0rem 0.3rem 0 0;
}

.tabstyle .cardtop {
    border: 5px solid white;
    border-radius: 0.7rem 0.7rem 0 0;
    background-color: transparent;
    border-bottom: none;
    width: fit-content;
    width: -webkit-fit-content;
    width: -moz-fit-content;
}

.tabstyle .cardbottom {
    border: 5px solid white;
    border-radius: 0 0.5rem 0.5rem 0.5rem;
    background-color: transparent;
}

.mentor h2 {
    line-height: 1.5;
}

.imgs {
    height: 75px;
}

.mentorHex .col {
    padding: 0;
}

#hexborder {
    stroke-width: 2;
    stroke: white;
}

.menticons .fa {
    color: white;
}

.mentor .card {
    background-color: transparent;
    border: 7px solid white;
    border-radius: 2rem;
    margin: 0 auto;
}

.mentor .fa {
    color: white;
}

footer li {
    list-style: none;
    position: relative;
    vertical-align: bottom;
    color: white;
}

.icons {
    margin: auto 0rem 1rem;
}

footer {
    color: white;
    border: 6px solid white;
    border-radius: 0.7rem;
    height: 300px;
}

footer h1,
h4 {
    text-align: left;
    font-size: 15px;
}


/* animation nav */


/* .navbar-nav{
    position: fixed;
	top: 0;
	left: 0;
	right: 0;
	bottom: 0;
	background:green no-repeat center;
	z-index: 10;
} */

.navbar-toggler {
    float: right;
    border: none;
    padding-right: 0;
}

.navbar-toggler:active,
.navbar-toggler:focus {
    outline: none;
}

.navbar-dark .navbar-toggler-icon {
    width: 24px;
    height: 17px;
    background-image: none;
    position: relative;
    border-bottom: 1px solid white;
    transition: all 300ms linear;
}

.navbar-dark .navbar-toggler-icon:after,
.navbar-dark .navbar-toggler-icon:before {
    width: 24px;
    position: absolute;
    height: 1px;
    background-color: white;
    top: 0;
    left: 0;
    content: '';
    z-index: 2;
    transition: all 300ms linear;
}

.navbar-dark .navbar-toggler-icon:after {
    top: 8px;
}

.navbar-toggler[aria-expanded="true"] .navbar-toggler-icon:after {
    transform: rotate(45deg);
}

.navbar-toggler[aria-expanded="true"] .navbar-toggler-icon:before {
    transform: translateY(8px) rotate(-45deg);
}

.navbar-toggler[aria-expanded="true"] .navbar-toggler-icon {
    border-color: transparent;
}

#bt {
    height: 40px;
    width: 150px;
    position: absolute;
    bottom: 0px;
    right: 0px;
    border-radius: 8px 1px 2px 1px;
    border: transparent;
    background-color: white;
    font-family: Nexa-Bold;
    font-weight: bold;
    font-size: 1.3em;
    color: #6f42c1;
}


/* Timeline Starts */


/* Timeline Starts */

